🎨 Changed post-list styles & theme toggle fix alignment

--- a/_sass/molecules/_toggle.scss
+++ b/_sass/molecules/_toggle.scss
@@ -1,9 +1,11 @@
 .m-toggle {
-  float: right;
-  margin: auto;
+  display: block;
+  text-align: right;
+  margin: 1em;
 
   @media all and (min-width: 500px){
     position: absolute;
+    margin: 0;
     top: 1em;
     right: 1em;
     text-align: center;
